--- a/webapi/templates/search.html
+++ b/webapi/templates/search.html
@@ -21,18 +21,6 @@
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-  <script type="text/javascript">
-  var verifyCallback = function(response) {
-        localStorage.res_capcha= response
-      };
-  var onloadCallback = function() {
-      grecaptcha.render('demo_capchat', {
-        'sitekey' : '6LcEBsUUAAAAANrazQHdXCZFANtMzOyFgKqIy9il',
-        'callback' : verifyCallback
-      });
-    };
-
-</script>
 </head>
 <body class="hold-transition sidebar-mini">
 <div class="wrapper">
@@ -215,10 +203,13 @@
                   <div id="demo_capchat"></div>
                   <div class="form-group row">
                     <div class="col-sm-12 text-right">
-                      <button type="submit" id="submit" class="btn btn-danger">Tra cứu</button>
+                      <button type="submit" id="submit" disabled="1" class="btn btn-info">Tra cứu</button>
                     </div>
                   </div>
                 </form>
+                <div class="col-sm-12 text-right" id="reset">
+                  
+                </div>
               </div>
               <!-- /.card-body -->
             </div>
@@ -294,6 +285,35 @@
 <!-- AdminLTE App -->
 <script src="{% static 'src/js/adminlte.min.js' %}"></script>
 <!-- AdminLTE for demo purposes -->
+<script type="text/javascript">
+  var verifyCallback = function(response) {
+        $.ajax({
+            url: '/api/verifying/',
+            method: 'POST',
+            contentType: 'application/x-www-form-urlencoded',
+            data: {
+                response: response
+            },
+            success: function(response){
+                if (response.success){
+                    $('button#submit').attr({'disabled': false});
+                } else {
+                    alert('Vui lòng xác thực!')
+                }
+            },
+            error: function(){
+                alert('Vui lòng xác thực!');
+            }
+        })
+    };
+
+    var onloadCallback = function() {
+        grecaptcha.render('demo_capchat', {
+            'sitekey' : '6LcEBsUUAAAAANrazQHdXCZFANtMzOyFgKqIy9il',
+            'callback' : verifyCallback
+        });
+      };
+</script>
 <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
     async defer>
 </script>
