--- a/webapi/templates/search.html
+++ b/webapi/templates/search.html
@@ -76,7 +76,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="/docs"  target="_blank" class="nav-link">
+            <a href="/docs/"  target="_blank" class="nav-link">
               <i class="nav-icon fa fa-book"></i>
               <p>DOC API</p>
             </a>
