--- a/webapi/templates/search.html
+++ b/webapi/templates/search.html
@@ -82,14 +82,14 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="/api-auth/logout?next=/" class="nav-link">
+            <a href="/api-auth/logout/?next=../../" class="nav-link">
               <i class="nav-icon fas fa-sign-out-alt"></i>
               <p>Đăng xuất</p>
             </a>
           </li>
           {% else %}
           <li class="nav-item">
-            <a href="/api-auth/login" class="nav-link">
+            <a href="/api-auth/login/?next=../../" class="nav-link">
               <i class="nav-icon fas fa-sign-in-alt"></i>
               <p>Đăng nhập</p>
             </a>
