--- a/webapi/templates/search.html
+++ b/webapi/templates/search.html
@@ -167,7 +167,7 @@
                       <div class="form-group row">
                         <label for="inputName" class="col-sm-3 col-form-label">Họ tên</label>
                         <div class="col-sm-9">
-                          <input type="text" class="form-control" id="hoten" required="1">
+                          <input type="text" class="form-control" id="hoten">
                         </div>
                       </div>
                     </div>
@@ -175,7 +175,7 @@
                       <div class="form-group row">
                         <label for="inputLocation" class="col-sm-3 col-form-label">Chứng minh thư</label>
                         <div class="col-sm-9">
-                          <input type="text" class="form-control" id="chungminhthu" required="1">
+                          <input type="text" class="form-control" id="chungminhthu">
                         </div>
                       </div>
                     </div>
@@ -186,7 +186,7 @@
                       <div class="form-group row">
                         <label for="inputSkills" class="col-sm-3 col-form-label">Năm cấp bằng</label>
                         <div class="col-sm-9">
-                          <input type="text" class="form-control" id="namcapbang" required="1">
+                          <input type="text" class="form-control" id="namcapbang">
                         </div>
                       </div>
                     </div>
@@ -194,7 +194,7 @@
                       <div class="form-group row">
                         <label for="inputSkills" class="col-sm-3 col-form-label">Số hiệu</label>
                         <div class="col-sm-9">
-                          <input type="text" class="form-control" id="sohieu" required="1">
+                          <input type="text" class="form-control" id="sohieu">
                         </div>
                       </div>
                     </div>
